Added apis I know and a section about web apps

--- a/main.tex
+++ b/main.tex
@@ -14,9 +14,10 @@
 \descript{| Front-End Developer }
 \location{Jan 2018 - Present | Helsinki, FI}
 \begin{tightemize}
-\item PWA integrations.
+\item Progressive Web App integrations.
 \item Frontend Development with React.
 \item Customer interactions and sprint planning.
+\item Delivering highly optimized and modern web applications built with the latest technologies.
 \end{tightemize}
 \sectionsep
 
@@ -59,9 +60,9 @@
 \begin{minipage}[t]{.6\textwidth}
 \subsection{Programming}
 \location{Highly skilled:}
-JavaScript \textbullet{} C\# \textbullet{} React.js \textbullet{} Java \textbullet{} PostgreSQL \\
+JavaScript \textbullet{} C\# \textbullet{} React.js \textbullet{} Java \textbullet{} PostgreSQL \textbullet{} JSON API \\
 \location{Moderately skilled:}
-C++ \textbullet{} Python \textbullet{} PHP \textbullet{} Java \textbullet{} MongoDB \\
+C++ \textbullet{} Python \textbullet{} PHP \textbullet{} Java \textbullet{} MongoDB \textbullet{} GraphQL \\
 \location{Familiar:}
 Amazon Web Services \textbullet{} Continuous Integration \textbullet{} Android \textbullet{} MSSQL
 \sectionsep
