Added Druid.fi end date

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 
 \runsubsection{Druid.fi}
 \descript{| Front-End Developer }
-\location{Jan 2018 - Present | Helsinki, FI}
+\location{Jan 2018 - Oct 2018 | Helsinki, FI}
 \begin{tightemize}
 \item Progressive Web App integrations.
 \item Frontend Development with React.
