--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,14 @@
 
 \section{Experience}
 
+\runsubsection{Wolt}
+\descript{| Front-End Developer }
+\location{Oct 2018 - Present | Helsinki, FI}
+\begin{tightemize}
+\item React Native development.
+\end{tightemize}
+\sectionsep
+
 \runsubsection{Druid.fi}
 \descript{| Front-End Developer }
 \location{Jan 2018 - Oct 2018 | Helsinki, FI}
@@ -60,7 +68,7 @@
 \begin{minipage}[t]{.6\textwidth}
 \subsection{Programming}
 \location{Highly skilled:}
-JavaScript \textbullet{} C\# \textbullet{} React.js \textbullet{} Java \textbullet{} PostgreSQL \textbullet{} JSON API \\
+JavaScript \textbullet{} C\# \textbullet{} React.js \textbullet{} React Native \textbullet{} Java \textbullet{} PostgreSQL \textbullet{} JSON API \\
 \location{Moderately skilled:}
 C++ \textbullet{} Python \textbullet{} PHP \textbullet{} Java \textbullet{} MongoDB \textbullet{} GraphQL \\
 \location{Familiar:}
