--- a/main.tex
+++ b/main.tex
@@ -11,10 +11,20 @@
 \section{Experience}
 
 \runsubsection{Wolt}
-\descript{| Front-End Developer }
+\descript{| Front-End Competence Lead }
+\location{Nov 2020 - Present | Helsinki, FI}
+\begin{tightemize}
+\item At Wolt, frontend is our biggest export. Whether it's our internal admin tools, our main customer-facing website, our open-source projects, our Node.js backends or our cross-platform mobile applications, frontend technology is part of the daily lives of dozens of engineers at Wolt.
+
+\item As frontend competence lead, my role is to facilitate knowledge sharing, documentation, mentorship, and all those frontend things that don't quite fit into any specific team's agenda.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Wolt}
+\descript{| React Native Developer }
 \location{Oct 2018 - Present | Helsinki, FI}
 \begin{tightemize}
-\item React Native development.
+\item Lovingly writing and maintaining our React Native codebase that supports the livelihood of tens of thousands of courier partners.
 \end{tightemize}
 \sectionsep
 
@@ -68,11 +78,11 @@
 \begin{minipage}[t]{.6\textwidth}
 \subsection{Programming}
 \location{Highly skilled:}
-JavaScript \textbullet{} C\# \textbullet{} React.js \textbullet{} React Native \textbullet{} Java \textbullet{} PostgreSQL \textbullet{} JSON API \\
+JavaScript \textbullet{} TypeScript \textbullet{} C\# \textbullet{} React.js \textbullet{} React Native \\
 \location{Moderately skilled:}
-C++ \textbullet{} Python \textbullet{} PHP \textbullet{} Java \textbullet{} MongoDB \textbullet{} GraphQL \\
+ReScript \textbullet{} C++ \textbullet{} Python \textbullet{} PHP \textbullet{} Java \textbullet{} MongoDB \textbullet{} GraphQL \textbullet{} Continuous Integration \\
 \location{Familiar:}
-Amazon Web Services \textbullet{} Continuous Integration \textbullet{} Android \textbullet{} MSSQL
+Amazon Web Services \textbullet{} Android \& iOS \textbullet{} MSSQL
 \sectionsep
 \end{minipage}
 \hfill
@@ -80,6 +90,7 @@ Amazon Web Services \textbullet{} Continuous Integration \textbullet{} Android \
 \subsection{Spoken \& Written}
 \location{Native fluency:} English, Faroese, Danish\\
 \location{Reading fluency:} Norwegian, Swedish, Icelandic\\
+\location{Learning:} Finnish\\
 \end{minipage}
 
 \end{document}  \documentclass[]{article}
