Add support group

--- a/main.tex
+++ b/main.tex
@@ -11,20 +11,30 @@
 \section{Experience}
 
 \runsubsection{Wolt}
-\descript{| Front-End Competence Lead }
-\location{Nov 2020 - Present | Helsinki, FI}
+\descript{| Web Developer, Support }
+\location{Oct 2021 - Present | Helsinki, FI}
 \begin{tightemize}
-\item At Wolt, frontend is our biggest export. Whether it's our internal admin tools, our main customer-facing website, our open-source projects, our Node.js backends or our cross-platform mobile applications, frontend technology is part of the daily lives of dozens of engineers at Wolt.
-
-\item As frontend competence lead, my role is to facilitate knowledge sharing, documentation, mentorship, and all those frontend things that don't quite fit into any specific team's agenda.
+\item My team in the support group is focusing on improving the efficiency of our colleagues in the support department. It's a highly data-driven team, and all our major decisions are made with a solid data foundation.
 \end{tightemize}
 \sectionsep
 
 \runsubsection{Wolt}
-\descript{| React Native Developer }
-\location{Oct 2018 - Present | Helsinki, FI}
+\descript{| Front-End Competence Lead }
+\location{Nov 2020 - Oct 2021 | Helsinki, FI}
+\begin{tightemize}
+\item At Wolt, frontend is our biggest export. Whether it's our internal admin tools, our main customer-facing website, our open-source projects, our Node.js backends or our cross-platform mobile applications, frontend technology is part of the daily lives of dozens of engineers at Wolt.
+
+\item As frontend competence lead, my role was to facilitate knowledge sharing, documentation, mentorship, and all those frontend things that didn't quite fit into any specific team's agenda.
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Wolt}
+\descript{| React Native Developer, Courier }
+\location{Oct 2018 - Oct 2021 | Helsinki, FI}
 \begin{tightemize}
 \item Lovingly writing and maintaining our React Native codebase that supports the livelihood of tens of thousands of courier partners.
+\item The app manages the entire lifecycle of our courier partners, from applying to their daily tasks relating to our platform. 
+\item We put a high effort at keeping the user experience great and in my opinion succeeded in doing so. Our Wolt Partner app has consistently had similar App Store and Google Play ratings as our main customer app, which is a pretty high bar.
 \end{tightemize}
 \sectionsep
 
