Add Engineering Team Lead section

--- a/main.tex
+++ b/main.tex
@@ -11,10 +11,23 @@
 \section{Experience}
 
 \runsubsection{Wolt}
-\descript{| Web Developer, Support }
-\location{Oct 2021 - Present | Helsinki, FI}
+\descript{| Engineering Team Lead, Adtech Team }
+\location{Aug 2022 - Present | Helsinki, FI}
 \begin{tightemize}
-\item My team in the support group is focusing on improving the efficiency of our colleagues in the support department. It's a highly data-driven team, and all our major decisions are made with a solid data foundation.
+\item As the engineering team lead of the AdTech team at Wolt, I am responsible for leading a team of engineers in the development and maintenance of the advertising technology platforms that power Wolt's advertising business.
+\item My main focus is on creating a positive and inclusive work environment where team members feel safe and supported, and are able to do their best work.
+\item I am also leading the technical integration towards a shared advertising platform between Wolt and DoorDash, working closely with our partners to ensure a smooth and successful integration.
+\item I work closely with product managers, designers, and other stakeholders to define and prioritize the team's roadmap and ensure that we are aligned with the broader goals of the company.
+\item I also support the professional development of the team members by providing guidance, mentorship, and opportunities for learning and growth.
+\end{tightemize}
+
+\sectionsep
+
+\runsubsection{Wolt}
+\descript{| Web Developer, Support Group }
+\location{Oct 2021 - Aug 2022 | Helsinki, FI}
+\begin{tightemize}
+\item My team in the support group was focusing on improving the efficiency of our colleagues in the support department. It was a highly data-driven team, and all our major decisions are made with a solid data foundation.
 \end{tightemize}
 \sectionsep
 
@@ -29,7 +42,7 @@
 \sectionsep
 
 \runsubsection{Wolt}
-\descript{| React Native Developer, Courier }
+\descript{| React Native Developer, Courier Group }
 \location{Oct 2018 - Oct 2021 | Helsinki, FI}
 \begin{tightemize}
 \item Lovingly writing and maintaining our React Native codebase that supports the livelihood of tens of thousands of courier partners.
