Update older sections to focus on impact

--- a/main.tex
+++ b/main.tex
@@ -27,9 +27,10 @@
 \descript{| Web Developer, Support Group }
 \location{Oct 2021 - Aug 2022 | Helsinki, FI}
 \begin{tightemize}
-\item My team in the support group was focusing on improving the efficiency of our colleagues in the support department. It was a highly data-driven team, and all our major decisions are made with a solid data foundation.
+\item Contributed to a data-driven team that focused on improving the efficiency of the support department.
+\item Worked closely with my team to analyze data and use machine learning techniques to identify opportunities for improvement and make data-driven decisions.
+\item Developed and maintained web-based tools and applications that were used by the support team.
 \end{tightemize}
-\sectionsep
 
 \runsubsection{Wolt}
 \descript{| Front-End Competence Lead }
@@ -45,8 +46,7 @@
 \descript{| React Native Developer, Courier Group }
 \location{Oct 2018 - Oct 2021 | Helsinki, FI}
 \begin{tightemize}
-\item Lovingly writing and maintaining our React Native codebase that supports the livelihood of tens of thousands of courier partners.
-\item The app manages the entire lifecycle of our courier partners, from applying to their daily tasks relating to our platform. 
+\item Developed and maintained a complex React Native codebase that powers the Wolt Partner app, used by tens of thousands of courier partners to manage their daily tasks and interactions with our platform
 \item We put a high effort at keeping the user experience great and in my opinion succeeded in doing so. Our Wolt Partner app has consistently had similar App Store and Google Play ratings as our main customer app, which is a pretty high bar.
 \end{tightemize}
 \sectionsep
@@ -55,10 +55,10 @@
 \descript{| Front-End Developer }
 \location{Jan 2018 - Oct 2018 | Helsinki, FI}
 \begin{tightemize}
-\item Progressive Web App integrations.
-\item Frontend Development with React.
-\item Customer interactions and sprint planning.
-\item Delivering highly optimized and modern web applications built with the latest technologies.
+\item Implemented and optimized a progressive web app (PWA) using React, Redux, and Webpack, resulting in improved performance, offline support, and user engagement.
+\item Developed and maintained a suite of web-based applications and services, using a combination of React, Drupal, and Node.js.
+\item Worked closely with customers to define requirements, design solutions, and deliver high-quality software on time and within budget.
+\item Collaborated with other developers, designers, and stakeholders to ensure that the software met the needs of the business and the users.
 \end{tightemize}
 \sectionsep
 
@@ -66,10 +66,9 @@
 \descript{| Full-Stack Developer }
 \location{Jun 2016 – Dec 2017 | Tórshavn, FO}
 \begin{tightemize}
-\item Database management.
-\item Network administration.
-\item Maintaining applications and websites.
-\item Designing and coding applications from scratch.
+\item Developed and maintained a suite of web-based applications and services, using a combination of Python, JavaScript, and MySQL.
+\item Implemented and managed a secure and reliable network infrastructure, including servers, switches, and firewalls.
+\item Worked closely with customers to define requirements, design solutions, and deliver high-quality software on time and within budget.
 \end{tightemize}
 \sectionsep
 
@@ -77,9 +76,9 @@
 \descript{| Programming Teacher}
 \location{Jan 2016 – Dec 2016 | Tórshavn, FO}
 \begin{tightemize}
-\item Teaching high school students about the wonders of programming.
-\item Python, JavaScript, Scratch.
-\item "Computerless" programming concepts.
+\item Developed and taught a curriculum for high school students, covering the fundamentals of programming, using languages such as Python, JavaScript, and Scratch.
+\item Created and led hands-on activities and projects that helped students learn and apply programming concepts, such as variables, loops, and functions.
+\item Assessed and evaluated student progress, providing feedback and support to help them improve and succeed.
 \end{tightemize}
 \sectionsep
 
@@ -87,8 +86,9 @@
 \descript{| IT Supporter}
 \location{May 2013 – Dec 2014 | Tórshavn, FO}
 \begin{tightemize}
-\item Hardware and software maintenance.
-\item Active Directory administration.
+\item Managed and maintained the hardware and software infrastructure of the municipality.
+\item Implemented and administered Active Directory.
+\item Provided technical support and assistance to thousands of users.
 \end{tightemize}
 \sectionsep
 
